# documentation/api.yml
@@ -28,13 +28,13 @@ tags:
 
 paths:
   #Authentication routes
-  /auth/local/login:
+  /auth/login:
     post:
       tags:
         - Authentication
       summary: User Login
       description: Logins in user with their email/phone number and password
-      operationId: localLogin
+      operationId: login
       requestBody:
         content:
           application/json:
@@ -62,7 +62,7 @@ paths:
                     'id': 2,
                     'email': 'johndoe@gmail.com',
                     'phone_number': null,
-                    'remember_me_token': null,
+                    "role": 'admin',
                     'created_at': '2020-11-07T05:06:35.694+01:00',
                     'updated_at': '2020-11-07T05:06:35.694+01:00',
                   }
@@ -75,65 +75,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-        500:
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  /auth/provider/login:
-    post:
-      tags:
-        - Authentication
-      summary: User Login or sign up
-      description: Logins in or signs up a user with their social media accounts such facebook or google
-      operationId: providerLogin
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/ProviderLogin"
-            examples:
-              google:
-                value:
-                  provider: "google"
-                  token: "eu3839kdkd8839"
-              facebook:
-                value:
-                  provider: "google"
-                  token: "eu3839kdkd8839"
-              
-      responses:
-        200:
-          description: Ok, user successfully logged in
-          content:
-            application/json:
-              schema:
-              example:
-                {
-                  'user_id': 2,
-                  'token': 'Mg.8hBq8wzx4kBNAgH3QfWUJ_hmPYnOKKD',
-                  'id': 2,
-                  'email': 'johndoe@gmail.com',
-                  'phone_number': null,
-                  'remember_me_token': null,
-                  'created_at': '2020-11-07T05:06:35.694+01:00',
-                  'updated_at': '2020-11-07T05:06:35.694+01:00',
-                }
-
-
-        404:
-          description: User not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CustomError"
-        422:
-          description: Unprocessible entity
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/CustomError"
         500:
           description: Internal Server Error
           content:
@@ -153,26 +94,60 @@ paths:
             schema:
               $ref: '#/components/schemas/User'
             example:
-              email: "johndoe@gmail.com"
               phoneNumber: 080835274833
               password: "johndoe"
+              isDriver: true
       responses:
         200:
           description: Ok, user successfully registered
           content:
             application/json:
               schema:
-              example:
-                {
-                  'user_id': 2,
-                  'token': 'Mg.8hBq8wzx4kBNAgH3QfWUJ_hmPYnOKKD',
-                  'id': 2,
-                  'email': 'johndoe@gmail.com',
-                  'phone_number': 080835274833,
-                  'remember_me_token': null,
-                  'created_at': '2020-11-07T05:06:35.694+01:00',
-                  'updated_at': '2020-11-07T05:06:35.694+01:00',
-                }
+              
+              examples:
+                driver:
+                  value:
+                    {
+                      'user_id': 3,
+                      'token': 'NQ.V-t24aSaY-Qa-yOuomlGFYTL0WOkEoKN6tXJnx9F8xOjpNG4FaMgmQe4gZxg',
+                      'phone_number': '080835274833',
+                      'role': 'driver',
+                      'created_at': '2020-11-22T12:29:52.091+01:00',
+                      'updated_at': '2020-11-22T12:29:52.096+01:00',
+                      'id': 3,
+                      'driver':
+                        {
+                          'id': 1,
+                          'first_name': null,
+                          'last_name': null,
+                          'full_name': null,
+                          'bvn': null,
+                          'user_id': 3,
+                          'created_at': '2020-11-22T12:29:52.170+01:00',
+                          'updated_at': '2020-11-22T12:29:52.170+01:00',
+                        },
+                    }
+                rider:
+                  value:
+                    {
+                      "user_id": 4,
+                      "token": "Ng.MJt1FQwBYjEeAE8vUHWqDA0QKX5mFaHBXao6yXKNjoYzyE9lypOuCe9zRvyP",
+                      "phone_number": "08083927161",
+                      "role": "rider",
+                      "created_at": "2020-11-22T12:36:06.935+01:00",
+                      "updated_at": "2020-11-22T12:36:06.940+01:00",
+                      "id": 4,
+                      "rider": {
+                        "id": 1,
+                        "first_name": null,
+                        "last_name": null,
+                        "address": null,
+                        "bvn": null,
+                        "user_id": 4,
+                        "created_at": "2020-11-22T12:36:07.006+01:00",
+                        "updated_at": "2020-11-22T12:36:07.006+01:00"
+                      }
+                    }
 
         422:
           description: Unprocessible entity
@@ -209,7 +184,6 @@ paths:
 
   # User related routes
   /users:
-    
     get:
       tags:
         - Users
