# start/Routes/auth.ts
@@ -2,10 +2,8 @@ import Route from "@ioc:Adonis/Core/Route";
 
 export default () => {
   Route.group(() => {
-    Route.post("local/login", "AuthController.localLogin");
-    Route.post("login", "AuthController.localLogin");
+    Route.post("login", "AuthController.login");
     Route.post("register", "AuthController.register");
     Route.delete("logout", "AuthController.logout").middleware(["auth"]);
-    Route.post("provider/login", "AuthController.providerLogin");
   }).prefix("auth");
 };
